@@ -33,8 +33,9 @@ void ptk_location_view_mount_network( PtkFileBrowser* file_browser,
                                       gboolean new_tab,
                                       gboolean force_new_mount );
 void mount_iso( PtkFileBrowser* file_browser, const char* path );
-void ptk_location_view_dev_menu( GtkWidget* parent, PtkFileBrowser* file_browser, 
-                                                            GtkWidget* menu );
+void ptk_location_view_dev_menu( GtkWidget* parent, DesktopWindow* desktop,
+                                            PtkFileBrowser* file_browser,
+                                            GtkWidget* menu );
 char* ptk_location_view_create_mount_point( int mode, VFSVolume* vol,
                                     netmount_t* netmount, const char* path );
 char* ptk_location_view_get_mount_point_dir( const char* name );
